--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web page builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -110,7 +110,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p><span style="font-style: normal;"><strong>Updates &amp; News:</strong></span></p><p><span style="font-style: normal;"><br></span></p><p><span style="font-style: normal;">⁕ GETModer has adopted a high loan to coin ratio of 95%.</span></p><p><span style="font-style: normal;">However a maximum C/L Ratio of 500% is possible under our special terms &amp; condition which is applicable to certain countries.</span></p><p><span style="font-style: normal;">A full details of loan terms will be avaialble after the completion of GETModer Initial Token Offering</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ GETModer will be offering borrowing on bitcoin, ether, ether classic, litecoin, ripple, bitcoin cash, zcash and other major digital currencies in sizes from $100 upwards over fixed terms.</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ Early Bird Offering ( closed door private sales) will be starting on 15 March 2018, for both instituitional &amp; personal participants.<br></span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ Early Bird Offering will be divided into 3 stages over a period of one month:</span></p><p><span style="font-size: 1.07rem;">- Early Bird 1 (starting 15 March)</span></p><p><span style="font-size: 1.07rem;">- Early Bird 2</span></p><p><span style="font-size: 1.07rem;">- Early Bird 3</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ <strong>We will soon be inviting a limited number of contributors to take part in the Early Birds Private Sale event. If you are interested in joining the Early Bird Offering for maximum benefits, <a href="page7.html">please follow this link to get whitelisted</a></strong><br></span></p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p><span style="font-style: normal;"><strong>Updates &amp; News:</strong></span></p><p><span style="font-style: normal;"><br></span></p><p><span style="font-style: normal;">⁕ GETModer has adopted a high loan to coin ratio of 95%.</span></p><p><span style="font-style: normal;">However a maximum C/L Ratio of 500% is possible under our special terms &amp; condition, which is applicable to certain countries.</span></p><p><span style="font-style: normal;">A full details of loan terms will be avaialble after the completion of GETModer Initial Token Offering</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ GETModer will be offering borrowing on bitcoin, ether, ether classic, litecoin, ripple, bitcoin cash, zcash and other major digital currencies in sizes from $100 upwards over fixed terms.</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ Early Bird Offering (closed door private sales) will be starting on 15 March 2018, for both instituitional &amp; personal participants.<br></span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ Early Bird Offering will be divided into 3 stages over a period of one month:</span></p><p><span style="font-size: 1.07rem;">- Early Bird 1 (starting 15 March)</span></p><p><span style="font-size: 1.07rem;">- Early Bird 2</span></p><p><span style="font-size: 1.07rem;">- Early Bird 3</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p><span style="font-size: 1.07rem;">⁕ <strong>We will soon be inviting a limited number of contributors to take part in the Early Birds Private Sale event. If you are interested in joining the Early Bird Offering for maximum benefits, <a href="page7.html">please follow this link to get whitelisted</a></strong><br></span></p></blockquote></div>
         </div>
     </div>
 
@@ -304,7 +304,7 @@
 
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="29" style="background-image: url(assets/images/contact-bg-1960x10000.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="29" style="background-image: url(assets/images/contact-bg-1960x10003.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
