--- a/page3.html
+++ b/page3.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="74" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="74" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer 2018">
-                                <input type="hidden" value="amP58Lju3hF/YvXwXrwGJYOE6/CJKC8Wr8WQLz9nPH9MTKdZEi9R+uYx/3eJfxH5NwVuggd2LyyKrHKX1EccXkex1ZpVu5o2Qda1rtdJKlcHx1Tl8H0bnir04S14N4IN" data-form-email="true">
+                                <input type="hidden" value="IHyhtF7/5BSPxV6sx6yjT+WzchrrH2vPrgMIsiSDgFH2MRwjPCbGvUOEORRdkjTrY57M4T0zKGxCtfWZsMk8vhbDwIQqtMod0m17D16FGXyf+tMC2mkXlsB0kZ5j70T9" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
