--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -129,7 +129,7 @@
 
     <div class="container">
         
-        <div class="lead"><p><strong>GETModer:&nbsp;</strong><span style="font-size: 1.07rem;">An Institutional Grade Crypto Ecosystem</span></p><p><span style="font-size: 1.07rem;"><strong>Products:</strong> Crypto Loan &amp; Instant Cryptocurrency Exchange</span></p><p><strong>Mission</strong>:<span style="font-size: 1.07rem;">&nbsp;1)&nbsp;</span><span style="font-size: 1.07rem;">Crypto Financing to Personal &amp; SMEs border-less, transparent and liquid as compared to traditional financing. 2) &nbsp;Cryptocurrency instant exchange at best rate and fast pace.</span></p><p><span style="font-size: 1.07rem;"><strong>Vision
+        <div class="lead"><p><strong>GETModer:&nbsp;</strong><span style="font-size: 1.07rem;">An Institutional Grade Crypto Platform</span></p><p><span style="font-size: 1.07rem;"><strong>Products:</strong> Crypto Loan &amp; Instant Cryptocurrency Exchange</span></p><p><strong>Mission</strong>:<span style="font-size: 1.07rem;">&nbsp;1)&nbsp;</span><span style="font-size: 1.07rem;">Crypto Financing to Personal &amp; SMEs border-less, transparent and liquid as compared to traditional financing. 2) &nbsp;Cryptocurrency instant exchange at best rate and fast pace.</span></p><p><span style="font-size: 1.07rem;"><strong>Vision
 :&nbsp;</strong></span><span style="font-size: 1.07rem;">Our goal is to 1) create an Asia wide Business/Personal Loans Asset Platform. 2) To promote instant cryptocurrency exchange</span></p></div>
     </div>
 
@@ -304,7 +304,7 @@
 
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="29" style="background-image: url(assets/images/contact-bg-1960x10003.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="29" style="background-image: url(assets/images/contact-bg-1960x10000.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -385,7 +385,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p>Early Birds Event is a private sales offering before ITO is launched. Early contributors in Early Birds will get 12,000 GTMR token for each 1 ETH contribution. GETModer Early Birds provate sale event will start on 15 March 2018 and end on 15 Arpil.&nbsp;</p><p><br></p><p>GETModer's Early Birds private sale is uncapped. Any unsold token will be carried forward to Pre-ICO which will start on 16 April 2018</p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p>Early Birds Event is a private sales offering before ITO is launched. Early contributors in Early Birds will get 12,000 GTMR token for each 1 ETH contribution. GETModer Early Birds provate sale event will start on 15 March 2018 and end on 15 Arpil.&nbsp;</p><p><br></p><p>GETModer's Early Birds private sale is uncapped. Any unsold token will be carried forward to Pre-ICO which will start on 16 April 2018</p><p><br></p><p>Blockchain is an open and decentralized system that can effectively register and constantly check transactions between two parties. Despite its simplicity, the basic technology of blocking provides decentralization, openness, and security to any interaction processes.</p></blockquote></div>
         </div>
     </div>
 
@@ -1060,7 +1060,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
                 <div class="col-md-10 col-md-offset-1">
 
                     <div class="clearfix"></div>
-                    <ul class="nav nav-tabs" role="tablist"><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white active" role="tab" data-toggle="tab" href="#tab1extTabs1-m" aria-expanded="false">Whitepaper</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab2extTabs1-m" aria-expanded="true">Team</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab3extTabs1-m" aria-expanded="false">Github</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab4extTabs1-m" aria-expanded="false">Social</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab5extTabs1-m" aria-expanded="false">Disclaimers</a></li><li class="nav-item" style="display: none"><a class="nav-link" role="tab" data-toggle="tab" href="#tab6extTabs1-m">Beautiful</a></li></ul>
+                    <ul class="nav nav-tabs" role="tablist"><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white active" role="tab" data-toggle="tab" href="#tab1extTabs1-m" aria-expanded="false">Whitepaper</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab2extTabs1-m" aria-expanded="true">Team</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab3extTabs1-m" aria-expanded="true">Github</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab4extTabs1-m" aria-expanded="false">Social</a></li><li class="nav-item" style="display: inline-block;"><a class="nav-link text-white" role="tab" data-toggle="tab" href="#tab5extTabs1-m" aria-expanded="false">Disclaimers</a></li><li class="nav-item" style="display: none"><a class="nav-link" role="tab" data-toggle="tab" href="#tab6extTabs1-m">Beautiful</a></li></ul>
 
                     <div class="tab-content noScroll">
                         <div id="tab1extTabs1-m" class="tab-pane in active" role="tabpanel">
@@ -1097,7 +1097,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
                             <h3 class="">Github</h3>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <p><a href="https://github.com/getmoder/IEO">https://github.com/getmoder/IEO</a><br><br><a href="https://github.com/getmoder/IEO" class="text-white">Smart contract might be updated or changed to enhance platform efficiency.<br></a></p>
+                                    <p><a href="https://github.com/getmoder/IEO">https://github.com/getmoder/IEO</a><br><br><a href="https://github.com/getmoder/IEO" class="text-white">Smart contract might be updated or changed to enhance platform efficiency.</a><br><br></p>
                                 </div>
                             </div>
                         </div>
