--- a/page6.html
+++ b/page6.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-3t" data-rv-view="98" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 120px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-3t" data-rv-view="98" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 120px; padding-bottom: 160px;">
 
     
 
@@ -228,7 +228,7 @@
     </div>
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-3z" data-rv-view="114" style="background-image: url(assets/images/contact-bg-1960x10003.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-3z" data-rv-view="114" style="background-image: url(assets/images/contact-bg-1960x10000.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
